<resources>
	<string name="app_name">Inventory</string>
	<string name="action_settings">Settings</string>

	<!-- actions -->
	<string name="action_insert_dummy_data">Insert Dummy Data</string>
	<string name="action_delete_all_entries">Delete All</string>
	<string name="editor_activity_title_new_product">Add new</string>
	<string name="action_save">Save</string>
	<string name="action_delete">Delete</string>

	<!-- Edit sections labels -->
	<string name="details">Details</string>
	<string name="quantity">Quantity</string>
	<string name="price">Price</string>
	<string name="choose_image">Choose image</string>

	<!-- hints for text edits -->
	<string name="hint_name">Name</string>
	<string name="hint_picture">Picture</string>
	<string name="hint_price">0.00</string>
	<string name="hint_quantity">0</string>
	<string name="unknown_price">unknown</string>
	<string name="currency">EUR</string>

	<!-- actions results -->
	<string name="editor_insert_new_successful">Product saved</string>
	<string name="editor_edit_successful">Product edited and saved</string>
	<string name="editor_insert_failed">Error when saving product</string>
	<string name="catalog_update_successful">Product updated</string>
	<string name="catalog_update_failed">Error when updating product</string>

	<string name="editor_required_name">Name is required</string>
	<string name="editor_required_price">Price is required</string>
	<string name="editor_required_photo">Photo is required</string>
	<string name="editor_ordering_product">Ordering product: </string>
	<string name="editor_message_body">Hello, can you send me product: </string>

	<!-- dialogs -->
	<string name="empty_view_title_text">Warehouse is currently empty</string>
	<string name="empty_view_subtitle_text">Get started by adding a new product</string>
	<string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
	<string name="discard">Discard</string>
	<string name="keep_editing">Keep Editing</string>
	<string name="editor_delete_product_successful">Product deleted</string>
	<string name="editor_delete_product_failed">Error when deleting product</string>
	<string name="delete_dialog_msg">Delete this product?</string>
	<string name="delete">Delete</string>
	<string name="cancel">Cancel</string>
</resources>
