<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="com.example.android.inventoryapp.CatalogActivity">

	<android.support.design.widget.AppBarLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:theme="@style/AppTheme.AppBarOverlay">

		<android.support.v7.widget.Toolbar
			android:id="@+id/toolbar_editor"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			app:popupTheme="@style/AppTheme.PopupOverlay"/>

	</android.support.design.widget.AppBarLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:padding="@dimen/activity_margin"
		android:layout_marginTop="55dp"
		tools:context=".EditorActivity">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<TextView
				android:text="@string/details"
				style="@style/CategoryStyle"/>

			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="0dp"
				android:layout_weight="2"
				android:paddingLeft="4dp"
				android:orientation="vertical">

				<EditText
					android:id="@+id/edit_name"
					android:hint="@string/hint_name"
					android:inputType="textCapWords"
					style="@style/EditorFieldStyle"/>

			</LinearLayout>

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/activity_margin"
			android:orientation="horizontal">

			<TextView
				android:text="Image"
				style="@style/CategoryStyle"/>

			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="0dp"
				android:layout_weight="2"
				android:paddingLeft="4dp"
				android:orientation="vertical">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					tools:context=".EditorActivity"
					android:layout_marginBottom="@dimen/activity_margin"
					android:background="#fff">

					<ImageView
						android:id="@+id/imageView"
						android:layout_width="120dp"
						android:layout_height="100dp"
						android:layout_gravity="center_horizontal"
						android:maxHeight="200dp"
						android:src="@drawable/noimg_1"/>

					<Button
						android:id="@+id/btn_pick"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:layout_gravity="center"
						android:layout_marginTop="20dp"
						android:text="@string/choose_image"/>

				</LinearLayout>

			</LinearLayout>

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<TextView
				android:text="@string/quantity"
				style="@style/CategoryStyle"/>

			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="0dp"
				android:layout_weight="2"
				android:orientation="horizontal">
				<Button
					android:id="@+id/decrease_quantity_btn"
					android:layout_width="40dp"
					android:layout_height="50dp"
					android:layout_gravity="left"
					android:layout_marginRight="@dimen/activity_margin"
					android:text="-"/>

				<EditText
					android:id="@+id/edit_quantity"
					android:hint="@string/hint_quantity"
					android:inputType="number"
					android:maxLength="6"
					style="@style/EditorFieldStyle2"/>

				<Button
					android:id="@+id/increase_quantity_btn"
					android:layout_width="40dp"
					android:layout_height="50dp"
					android:layout_gravity="left"
					android:layout_marginLeft="@dimen/activity_margin"
					android:text="+"/>

			</LinearLayout>

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<TextView
				android:text="@string/price"
				style="@style/CategoryStyle"/>

			<RelativeLayout
				android:layout_height="wrap_content"
				android:layout_width="0dp"
				android:layout_weight="2"
				android:paddingLeft="4dp">

				<EditText
					android:id="@+id/edit_price"
					android:hint="@string/hint_price"
					android:inputType="number"
					android:maxLength="6"
					style="@style/EditorFieldStyle"/>

				<TextView
					android:id="@+id/label_currency"
					android:text="@string/currency"
					style="@style/EditorUnitsStyle"/>

			</RelativeLayout>

		</LinearLayout>

	</LinearLayout>

	<android.support.design.widget.FloatingActionButton
		android:id="@+id/fab"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="bottom|end"
		android:layout_margin="@dimen/fab_margin"
		app:srcCompat="@drawable/ic_save"/>

</android.support.design.widget.CoordinatorLayout>